Reparaturen + Infofenster zur Ersetzung von Messwerten beim Laden